crates/k-rust/tests/snapshots/inner_rules__parses_an_explicit_kast_label.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax KItem ::= \"hold\" \"(\" KItem \")\" [symbol(hold)]\n                 | \"foo\" [symbol(foo)]\n  rule hold(#klabel(foo)) => hold(foo)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "hold(#WrappedKLabel(#token(\"foo\",\"KLabel\")))=>hold(foo(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
