crates/k-rust/tests/snapshots/inner_rules__parses_and_cleans_all_cast_forms.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Id ::= r\"[a-z]\" [token]\n  syntax Exp ::= Id\n  syntax Exp ::= \"e\" [symbol(e)]\n  rule X::Exp => {X}::Exp\n  rule X:Exp => {X}:>Exp\n  rule e::Exp => {e}::Exp\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "#SemanticCastToExp(X)=>#SemanticCastToExp(X)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
    SentenceSummary {
        kind: "rule",
        body: "#SemanticCastToExp(X)=>`project:Exp`(#SemanticCastToExp(X))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
    SentenceSummary {
        kind: "rule",
        body: "e(.KList)=>e(.KList)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
