crates/k-rust/tests/snapshots/inner_rules__parses_generated_sort_projection_syntax.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Set ::= \".Set\" [symbol(.Set)]\n  syntax SetCell ::= \"<set>\" Set \"</set>\" [cell]\n  rule <set> project:Set ( .K ) => .Set </set>\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "`<set>_</set>_MAIN_SetCell_Set`(#noDots(.KList),`project:Set`(.K)=>`.Set`(.KList),#noDots(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
