crates/k-rust/tests/snapshots/inner_rules__parses_large_generic_application_argument_lists_without_forest_truncation.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Exp ::= \"a\" [symbol(a)]\n  syntax Exp ::= \"declared-f\" \"(\" Exp \",\" Exp \",\" Exp \",\" Exp \",\" Exp \",\" Exp \",\" Exp \",\" Exp \",\" Exp \",\" Exp \",\" Exp \")\" [symbol(f)]\n  rule f(a, a, a, a, a, a, a, a, a, a, a) => a\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "f(a(.KList),a(.KList),a(.KList),a(.KList),a(.KList),a(.KList),a(.KList),a(.KList),a(.KList),a(.KList),a(.KList))=>a(.KList)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
