crates/k-rust/tests/snapshots/inner_rules__parses_named_anonymous_variables_in_nested_prefix_syntax.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Bytes ::= \"bytes\" [symbol(bytes)]\n  syntax PrefixType ::= \"#str\" | \"#list\"\n  syntax Prefix ::= PrefixType \"(\" Int \",\" Int \")\"\n  syntax JSONs ::= List{JSON, \",\"} [symbol(jsons)]\n  syntax JSON ::= Bytes | \"[\" JSONs \"]\" [symbol(jsonList)]\n  syntax JSON ::= \"#decode\" \"(\" Bytes \",\" Prefix \")\" [symbol(decode)]\n  syntax JSONs ::= \"#decodeList\" \"(\" Bytes \",\" Int \")\" [symbol(decodeList)]\n  rule #decode(BYTES, #list(_LEN, POS)) => [#decodeList(BYTES, POS)]\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "decode(#SemanticCastToBytes(BYTES),`_(_,_)_MAIN_Prefix_PrefixType_Int_Int`(`#list_MAIN_PrefixType`(.KList),#SemanticCastToInt(_LEN),#SemanticCastToInt(POS)))=>jsonList(decodeList(#SemanticCastToBytes(BYTES),#SemanticCastToInt(POS)))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
