crates/k-rust/tests/snapshots/inner_rules__parses_nested_collection_operations_in_a_record_field.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n               | Int \"+Int\" Int [symbol(addInt)]\n  syntax Key ::= \"key\" [symbol(key)]\n  syntax KItem ::= Int | Key\n  syntax Map ::= \".Map\" [symbol(dotMap)]\n               | Map \"[\" key: KItem \"<-\" value: KItem \"]\" [symbol(updateMap), prefer]\n  syntax KItem ::= Map \"[\" KItem \"]\" \"orDefault\" KItem [symbol(lookupMap)]\n  syntax TypesInfo ::= \"#ti\" \"(\" t2i: Map \",\" count: Int \")\" [symbol(ti)]\n  syntax Result ::= \"use\" \"(\" TypesInfo \")\" [symbol(use)]\n  rule use(#ti(... t2i: M, count: N))\n    => use(#ti(... t2i: M [ key <- (M [ key ] orDefault N) ], count: N +Int 1))\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "use(ti(#SemanticCastToMap(M),#SemanticCastToInt(N)))=>use(ti(updateMap(#SemanticCastToMap(M),key(.KList),lookupMap(#SemanticCastToMap(M),key(.KList),#SemanticCastToInt(N))),addInt(#SemanticCastToInt(N),#token(\"1\",\"Int\"))))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
