crates/k-rust/tests/snapshots/inner_rules__parses_rule_claim_context_and_alias_bubbles.snap
---
source: crates/k-rust/tests/inner_rules.rs
expression: sentences
---
[
    SentenceSummary {
        kind: "rule",
        body: "`_+__MAIN_Exp_Exp_Exp`(#SemanticCastToExp(X),#token(\"0\",\"Int\"))=>#SemanticCastToExp(X)",
        requires: "`_==__MAIN_Bool_Exp_Exp`(#SemanticCastToExp(X),#token(\"0\",\"Int\"))",
        ensures: Some(
            "#token(\"false\",\"Bool\")",
        ),
        label: Some(
            "MAIN.plus-zero",
        ),
    },
    SentenceSummary {
        kind: "claim",
        body: "`_+__MAIN_Exp_Exp_Exp`(#SemanticCastToExp(X),#token(\"0\",\"Int\"))=>#SemanticCastToExp(X)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "`_==__MAIN_Bool_Exp_Exp`(#SemanticCastToExp(X),#token(\"0\",\"Int\"))",
        ),
        label: None,
    },
    SentenceSummary {
        kind: "context",
        body: "`_+__MAIN_Exp_Exp_Exp`(#SemanticCastToExp(HOLE),#token(\"0\",\"Int\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: None,
        label: None,
    },
    SentenceSummary {
        kind: "alias",
        body: "`_+__MAIN_Exp_Exp_Exp`(#SemanticCastToExp(X),#token(\"0\",\"Int\"))=>#SemanticCastToExp(X)",
        requires: "#token(\"true\",\"Bool\")",
        ensures: None,
        label: Some(
            "simplify-zero",
        ),
    },
]
